@@ -348,7 +348,8 @@ struct Range {
 
 struct ConfigGroup {
   1: TaskConfig config
-  2: set<i32> instanceIds   // TODO(maxim): change it to use list<Range> instead.
+  2: set<i32> instanceIds //TODO(maxim): deprecated. Remove in AURORA-1519.
+  3: set<Range> instances
 }
 
 struct ConfigSummary {
