@@ -14,6 +14,7 @@
   https://github.com/apache/mesos/blob/ebcf8cc2f2f6c236f6e9315447c247e6348141e1/docs/getting-started.md
   for more details on Mesos runtime dependencies.
 - Resource quota is no longer consumed by production jobs with a dedicated constraint (AURORA-1457).
+- Thrift ConfigGroup.instanceIds field has been deprecated. Use ConfigGroup.instances instead.
 
 0.9.0
 -----
